fix: configure CORS for Vercel production