@@ -20,18 +20,25 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
  * Spring Security configuration for the Omake Expense Tracker.
  *
- * <p>Key decisions:
+ * <p>
+ * Key decisions:
  * <ul>
- *   <li>CSRF disabled — the API is stateless and uses JWT, not browser cookies.</li>
- *   <li>Session policy STATELESS — no {@code HttpSession} is created or used.</li>
- *   <li>CORS explicitly allows the Vite dev server origin ({@code http://localhost:5173}).</li>
- *   <li>{@code /api/auth/**} is publicly accessible; everything else requires authentication.</li>
- *   <li>{@link JwtAuthenticationFilter} runs before Spring's form-login filter.</li>
+ * <li>CSRF disabled — the API is stateless and uses JWT, not browser
+ * cookies.</li>
+ * <li>Session policy STATELESS — no {@code HttpSession} is created or
+ * used.</li>
+ * <li>CORS explicitly allows the Vite dev server origin
+ * ({@code http://localhost:5173}).</li>
+ * <li>{@code /api/auth/**} is publicly accessible; everything else requires
+ * authentication.</li>
+ * <li>{@link JwtAuthenticationFilter} runs before Spring's form-login
+ * filter.</li>
  * </ul>
  */
 @Configuration
@@ -45,9 +52,8 @@ public class SecurityConfig {
     private final CustomUserDetailsService userDetailsService;
 
     public SecurityConfig(
-        JwtAuthenticationFilter jwtAuthenticationFilter,
-        CustomUserDetailsService userDetailsService
-    ) {
+            JwtAuthenticationFilter jwtAuthenticationFilter,
+            CustomUserDetailsService userDetailsService) {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
         this.userDetailsService = userDetailsService;
     }
@@ -59,29 +65,26 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            // CSRF is unnecessary for stateless JWT APIs
-            .csrf(AbstractHttpConfigurer::disable)
+                // CSRF is unnecessary for stateless JWT APIs
+                .csrf(AbstractHttpConfigurer::disable)
 
-            // Apply our explicit CORS configuration bean
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                // Apply our explicit CORS configuration bean
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-            // No server-side sessions
-            .sessionManagement(session ->
-                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-            )
+                // No server-side sessions
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
-            // Authorization rules
-            .authorizeHttpRequests(auth -> auth
-                // Public auth endpoints
-                .requestMatchers("/api/auth/**").permitAll()
-                // Allow OPTIONS preflight on all paths (required for browser CORS)
-                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                // Any other request must carry a valid JWT
-                .anyRequest().authenticated()
-            )
+                // Authorization rules
+                .authorizeHttpRequests(auth -> auth
+                        // Public auth endpoints
+                        .requestMatchers("/api/auth/**").permitAll()
+                        // Allow OPTIONS preflight on all paths (required for browser CORS)
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        // Any other request must carry a valid JWT
+                        .anyRequest().authenticated())
 
-            // Plug in our JWT filter before the standard form-login filter
-            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                // Plug in our JWT filter before the standard form-login filter
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -94,20 +97,10 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Explicit allowed origins — driven by the environment variable
-        config.setAllowedOrigins(List.of(allowedOrigins.split(",")));
-
-        // Methods required by the frontend
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-
-        // Allow Authorization header (for sending JWT) and standard headers
-        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
-
-        // Required when credentials (e.g. cookies) are included in the CORS request
+        config.setAllowedOrigins(Arrays.asList("http://localhost:5173", "https://omake-expense-tracker.vercel.app"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList("*"));
         config.setAllowCredentials(true);
-
-        // How long the browser may cache the preflight response (in seconds)
-        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
@@ -133,7 +126,7 @@ public class SecurityConfig {
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config)
-        throws Exception {
+            throws Exception {
         return config.getAuthenticationManager();
     }
 }
